[tool.poetry]
name = "rgbd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.20.2"
pandas = "^1.2.3"
torch = "^1.8.1"
torchvision = "^0.9.1"
brambox = "^3.2.0"
lightnet = "^2.0.1"
catalyst = "^21.3.2"
matplotlib = "^3.4.1"
tensorboardX = "^2.2"
tensorboard = "^2.5.0"
opencv-python = "^4.5.1"
wandb = "^0.10.27"
seaborn = "^0.11.1"
thop = "^0.0.31"
pycocotools = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
